// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainCard Should render correctly if is editing mode disabled 1`] = `
<Fragment>
  <ForwardRef>
    <GithubAvatar
      githubId="john-doe"
      size={96}
      style={
        Object {
          "display": "block",
          "margin": "0 auto 10px",
        }
      }
    />
    <Title
      level={1}
      style={
        Object {
          "fontSize": 24,
          "margin": 0,
          "textAlign": "center",
        }
      }
    >
      John Doe
    </Title>
    <Paragraph
      style={
        Object {
          "marginBottom": 20,
          "textAlign": "center",
        }
      }
    >
      <a
        href="https://github.com/john-doe"
        style={
          Object {
            "fontSize": 16,
            "marginLeft": "-14px",
          }
        }
        target="_blank"
      >
        <ForwardRef(GithubFilled) />
         
        john-doe
      </a>
    </Paragraph>
    <Paragraph
      style={
        Object {
          "margin": 0,
          "textAlign": "center",
        }
      }
    >
      <span
        style={
          Object {
            "marginLeft": "-14px",
          }
        }
      >
        <ForwardRef(EnvironmentFilled) />
         
        Minsk, Belarus
      </span>
    </Paragraph>
    <Paragraph
      style={
        Object {
          "marginTop": 20,
          "textAlign": "center",
        }
      }
    >
      <a
        href="public-url"
        target="_blank"
      >
        Public CV
      </a>
    </Paragraph>
  </ForwardRef>
</Fragment>
`;

exports[`MainCard Should render correctly if is editing mode enabled 1`] = `
<Fragment>
  <ForwardRef
    actions={
      Array [
        <ForwardRef(EditOutlined)
          onClick={[Function]}
        />,
        <ForwardRef(SettingOutlined)
          onClick={[Function]}
        />,
      ]
    }
  >
    <GithubAvatar
      githubId="john-doe"
      size={96}
      style={
        Object {
          "display": "block",
          "margin": "0 auto 10px",
        }
      }
    />
    <Title
      level={1}
      style={
        Object {
          "fontSize": 24,
          "margin": 0,
          "textAlign": "center",
        }
      }
    >
      John Doe
    </Title>
    <Paragraph
      style={
        Object {
          "marginBottom": 20,
          "textAlign": "center",
        }
      }
    >
      <a
        href="https://github.com/john-doe"
        style={
          Object {
            "fontSize": 16,
            "marginLeft": "-14px",
          }
        }
        target="_blank"
      >
        <ForwardRef(GithubFilled) />
         
        john-doe
      </a>
    </Paragraph>
    <Paragraph
      style={
        Object {
          "margin": 0,
          "textAlign": "center",
        }
      }
    >
      <span
        style={
          Object {
            "marginLeft": "-14px",
          }
        }
      >
        <ForwardRef(EnvironmentFilled) />
         
        Minsk, Belarus
      </span>
    </Paragraph>
    <Paragraph
      style={
        Object {
          "marginTop": 20,
          "textAlign": "center",
        }
      }
    >
      <a
        href="public-url"
        target="_blank"
      >
        Public CV
      </a>
    </Paragraph>
    <PermissionsSettingsDrawer
      hideSettings={[Function]}
      isSettingsVisible={false}
      onPermissionsSettingsChange={[MockFunction]}
    />
    <ProfileSettingsDrawer
      content={
        <Row>
          <Col>
            <Row>
              <Text
                strong={true}
              >
                Name
              </Text>
            </Row>
            <Row
              style={
                Object {
                  "marginTop": 4,
                }
              }
            >
              <ForwardRef
                onChange={[Function]}
                placeholder="Firstname Lastname"
                value="John Doe"
              />
            </Row>
            <Row
              style={
                Object {
                  "marginTop": 24,
                }
              }
            >
              <Text
                strong={true}
              >
                Location
              </Text>
            </Row>
            <Row
              style={
                Object {
                  "marginTop": 4,
                }
              }
            >
              <LocationSelect
                location={
                  Object {
                    "cityName": "Minsk",
                    "countryName": "Belarus",
                  }
                }
                onChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
            </Row>
          </Col>
        </Row>
      }
      hideSettings={[Function]}
      isSettingsVisible={false}
    />
  </ForwardRef>
</Fragment>
`;
